tests/ui/type-alias-impl-trait/reveal_local.stderr
error[E0283]: type annotations needed: cannot satisfy `Foo: Send`
  --> $DIR/reveal_local.rs:23:15
   |
LL |     is_send::<Foo>();
   |               ^^^
   |
   = note: cannot satisfy `Foo: Send`
note: required by a bound in `is_send`
  --> $DIR/reveal_local.rs:7:15
   |
LL | fn is_send<T: Send>() {}
   |               ^^^^ required by this bound in `is_send`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
